--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aayush Panthi Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-        }
-        h1 {
-            font-size: 3rem;
-            color: #007BFF;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.2rem;
-            color: #555;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aayush Panthi — Under Construction</title>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to my website</h1>
-    <p>This website is currently under maintenance. Stay tuned for updates!</p>
+
+  <div class="container">
+    <h1>Aayush Panthi</h1>
+    
+    <p class="subtitle">Under Modification</p>
+    
+    <p class="message">
+      It takes a little time to make it perfect…<br>
+      Full version coming soon!
+    </p>
+
+    <div class="video-wrapper">
+      <iframe 
+        src="https://www.youtube.com/embed/OXAvbEFhPbQ?autoplay=1&mute=1&loop=1&playlist=OXAvbEFhPbQ&controls=0&modestbranding=1&rel=0&iv_load_policy=3" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
+    </div>
+
+    <p class="enjoy-text">
+      Till then… enjoy this beautiful evergreen melody
+    </p>
+
+    <div class="loader"></div>
+
+    <footer>
+      © Aayush panthi
+    </footer>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
