--- a/index.html
+++ b/index.html
@@ -1,47 +1,358 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aayush Panthi — Under Construction</title>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-  
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aayush Panthi | Chemical Engineer</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
+
 <body>
+    <!-- Header -->
+    <header>
+        <a href="/">
+            <!-- (for future logo)
+            <div class="logo">
+                <img src="Images/amrit-logo-adobe.png" alt="Amrit Khanal Logo" class="logo-img">
+            </div>
+        -->
+            <h3 class="logo-text">Aayush Panthi</h3>
+        </a>
+        <nav id="navbar">
+            <ul>
+                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#blogs">My Blog</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+            </ul>
+        </nav>
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="theme-toggle">
+            <i class="fas fa-sun"></i>
+            <i class="fas fa-moon"></i>
+        </div>
 
-  <div class="container">
-    <h1>Aayush Panthi</h1>
-    
-    <p class="subtitle">Under Modification</p>
-    
-    <p class="message">
-      It takes a little time to make it perfect…<br>
-      Full version coming soon!
-    </p>
+    </header>
 
-    <div class="video-wrapper">
-      <iframe 
-        src="https://www.youtube.com/embed/OXAvbEFhPbQ?autoplay=1&mute=1&loop=1&playlist=OXAvbEFhPbQ&controls=0&modestbranding=1&rel=0&iv_load_policy=3" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-      </iframe>
+    <section id="home" class="hero">
+        <!-- Canvas for particle animation -->
+        <canvas id="particle-canvas"></canvas>
+
+        <div class="hero-content container">
+            <div class="hero-text-column">
+                <h1>Aayush Panthi</h1>
+                <h3>Chemical Engineer</h3>
+                <p class="hero-tagline" style="margin:0; line-height:1.15;">
+                    उद्यमेन हि सिध्यन्ति कार्याणि न मनोरथैः ।<br>
+                    न हि सुप्तस्य सिंहस्य प्रविशन्ति मुखे मृगाः ॥<br><br>
+                </p>
+                <br>
+                <div class="hero-buttons">
+                    <a href="#about" class="btn primary-btn">Learn More</a>
+                    <a href="#gallery" class="btn secondary-btn">gallery</a>
+                    <a href="#blogs" class="btn secondary-btn">Read My Blogs</a>
+                </div>
+            </div>
+            <div class="profile-image"> <!-- This container is key for its positioning -->
+                <img src="Images/aayush1.jpeg" alt="Aayush Panthi - Chemical Engineer" class="profile-img">
+            </div>
+        </div>
+        <div class="scroll-down">
+            <a href="#about"><i class="fas fa-chevron-down"></i></a>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="main-content">
+                    <div class="bio-text">
+
+                        <h3>Aayush Panthi</h3>
+                        <p><strong>Chemical Engineer | Process Engineer | AI-Driven Environmental Solutions</strong><br>
+                            📍 Arghakhanchi, Nepal</p>
+
+                        <h4>Profile</h4>
+                        <p>
+                            Chemical Engineer with strong exposure to <em>industrial operations, process optimization,
+                                and safety engineering</em>,
+                            complemented by hands-on experience in <strong>AI and data-driven environmental
+                                analysis</strong>.
+                            Proven leadership at national-level technical events and a track record of delivering
+                            practical engineering solutions for industry and government stakeholders.
+                        </p>
+
+                        <h4>Core Expertise</h4>
+                        <ul>
+                            <li>Process Optimization & Plant Operations</li>
+                            <li>Industrial Safety, Risk & Compliance</li>
+                            <li>Water & Wastewater Treatment Systems</li>
+                            <li>AI / Machine Learning for Engineering Data</li>
+                            <li>Quality Control & Process Monitoring</li>
+                            <li>Technical Reporting & Stakeholder Coordination</li>
+                        </ul>
+
+                        <h4>Professional Experience</h4>
+                        <p><strong>Process Engineer | Industry Role</strong> – Present</p>
+                        <ul>
+                            <li>Working on improving operational efficiency through process monitoring and optimization
+                            </li>
+                            <li>Supporting implementation of safety protocols and standard operating procedures</li>
+                            <li>Assisting in performance analysis and continuous improvement initiatives</li>
+                        </ul>
+
+                        <p><strong>Intern – Nepal Oil Corporation (NOC)</strong> – 2024</p>
+                        <ul>
+                            <li>Trained in petroleum storage systems, fuel quality testing, and distribution operations
+                            </li>
+                            <li>Gained exposure to safety standards, inspection procedures, and regulatory compliance
+                            </li>
+                            <li>Observed large-scale fuel handling and logistics operations</li>
+                        </ul>
+
+                        <p><strong>Machine Learning Researcher – AI Research Lab</strong> – 2024</p>
+                        <ul>
+                            <li>Developed predictive models for environmental datasets</li>
+                            <li>Applied machine learning techniques to analyze and forecast process-related parameters
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="sidebar">
+                        <div class="education">
+                            <div class="edu-item">
+                                <span class="edu-icon">🔍</span>
+                                <div>
+                                    <h3>Key Projects</h3>
+                                    <p>
+                                        <strong>Wastewater Parameter Prediction (Final Year Project)</strong> | 2024<br>
+                                        Built an <em>RNN-based predictive model</em> for Guheshwari Wastewater Treatment
+                                        Plant.
+                                        Forecasted critical treatment parameters to support operational efficiency and
+                                        demonstrated AI integration in conventional treatment systems.
+                                    </p>
+                                    <p>
+                                        <strong>Water Quality Assessment – Kathmandu Valley</strong><br>
+                                        Submitted to: Ministry of Water Supply and Sanitation<br>
+                                        Conducted analysis of pH, BOD, and turbidity; delivered data-backed
+                                        recommendations for regional water management.
+                                    </p>
+                                    <p>
+                                        <strong>Chemical Risk Mitigation & Emergency Planning</strong> | 2023<br>
+                                        Submitted to: Ministry of Home Affairs<br>
+                                        Designed chemical safety protocols and hazard mitigation strategies; focused on
+                                        reducing industrial risk and improving emergency response readiness.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="edu-item">
+                                <span class="edu-icon">🏆</span>
+                                <div>
+                                    <h3>Leadership & Activities</h3>
+                                    <p>
+                                        <strong>Secretary – Students’ Society of Chemical Engineering (SSOChE)</strong>
+                                        | 2024–2025<br>
+                                        Led organizational operations and student–industry engagement initiatives;
+                                        organized technical workshops, guest lectures, and professional events.
+                                    </p>
+                                    <p>
+                                        <strong>Organizer – INNOCHEM 2025</strong><br>
+                                        Coordinated a National-Level Chemical Engineering Symposium and managed
+                                        collaboration between students, professionals, and industry experts.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="edu-item">
+                                <span class="edu-icon">🎓</span>
+                                <div>
+                                    <h3>Education</h3>
+                                    <p>
+                                        <strong>B.E. Chemical Engineering</strong><br>
+                                        Pulchowk Campus, Institute of Engineering (IOE), Tribhuvan University<br>
+                                        2021 – 2025
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="edu-item skills-item">
+                                <span class="edu-icon">💻</span>
+                                <div>
+                                    <h3>Technical Skills</h3>
+                                    <div class="skills-overview">
+                                        <ul class="skills-logo-list">
+                                            <li><img src="Images/python logo.png" alt="Python" title="Python"></li>
+                                            <li><img src="Images/MATLAB-logo.png" alt="Matlab" title="Matlab"></li>
+                                            <li><img src="Images/ms-office.png" alt="MS Office Suite" title="MS Office">
+                                            </li>
+                                            <li><img src="Images/latex-logo.png" alt="LaTex" title="LaTex"></li>
+                                            <li><img src="Images/machine-learning.png" alt="machine-learning"
+                                                    title="Machine Learning"></li>
+                                            <li><img src="Images/aspen-plus-logo.png" alt="Aspen Plus"
+                                                    title="Aspen Plus"></li>
+                                            <li><img src="Images/excel-logo.png" alt="Excel" title="Excel"></li>
+                                            <li><img src="Images/autocad-plant-3d.png" alt="AutoCad-Plant-3d"
+                                                    title="AutoCad-Plant-3d"></li>
+                                            <li><img src="Images/DWSIM.png" alt="DWSIM" title="DWSIM" width="75"
+                                                    height="50"></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="edu-item">
+                                <span class="edu-icon">⚡</span>
+                                <div>
+                                    <h3>Why Hire Me</h3>
+                                    <ul>
+                                        <li>Strong fundamentals with real industrial exposure</li>
+                                        <li>Proven ability to combine <em>engineering + data + safety</em></li>
+                                        <li>Leadership experience at national and institutional levels</li>
+                                        <li>Ready to contribute from <em>day one</em> in plant, process, or research
+                                            roles</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Gallery section-->
+    <section id="gallery" class="gallery">
+        <h2 class="gallery-title">My Gallery</h2>
+
+        <div class="gallery-container">
+
+            <!-- Image 1 -->
+            <div class="gallery-item">
+                <img src="images/aayush1.jpeg" alt="Facebook">
+                <div class="overlay">
+                    <h3>SSOCHE</h3>
+                    <p>INNOCHEM-2025</p>
+                </div>
+            </div>
+
+            <!-- Image 2 -->
+            <div class="gallery-item">
+                <img src="images/aayush2.jpeg" alt="LinkedIn">
+                <div class="overlay">
+                    <h3>INNOCHEM</h3>
+                    <p>National Chemical Exhibition 2025</p>
+                    <button>Description</button>
+                </div>
+            </div>
+            <!-- Upload more image as needed here -->
+            <!--
+            <div class="gallery-item">
+                <img src="images/aayush1.jpeg" alt="Facebook">
+                <div class="overlay">
+                    <h3>SSOCHE</h3>
+                    <p>INNOCHEM-2025</p>
+                </div>
+            </div>
+            -->
+
+        </div>
+
+        <div class="gallery-button">
+            <button id="toggleGallery">View More</button>
+        </div>
+    </section>
+
+    <!-- Modal Preview -->
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img id="modalImg" class="modal-content">
+        <div id="modalText"></div>
     </div>
 
-    <p class="enjoy-text">
-      Till then… enjoy this beautiful evergreen melody
-    </p>
 
-    <div class="loader"></div>
+    <!-- My Blog Section -->
+    <section id="blogs" class="blog-section-wrapper">
+        <div class="container">
+            <h2 class="section-title">My Thoughts & Articles</h2>
+            <div class="blog-posts-container">
+                <!-- Blog posts will be dynamically inserted here by JavaScript -->
+            </div>
+            <div class="button-container">
+                <!-- Initial text will be replaced by JavaScript -->
+                <button class="toggle-btn" id="toggleBtn">Coming soon</button>
+                <!-- Change coming Soon to Loading Blogs...after adding blog  -->
+            </div>
+        </div>
+    </section>
+    <!-- End of My Blog Section -->
 
-    <footer>
-      © Aayush panthi
-    </footer>
-  </div>
 
-  <script src="script.js"></script>
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Contact Me</h2>
+            <div class="contact-content">
+                <div class="social-links">
+                    <h3>Connect With Me</h3>
+                    <div class="social-icons">
+                        <a href="https://www.linkedin.com/in/aayushpanthi/" class="social-icon" target="_blank"
+                            rel="noopener noreferrer" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://x.com/panthi_aayush" class="social-icon" target="_blank"
+                            rel="noopener noreferrer" aria-label="X (formerly Twitter)">
+                            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
+                                <path
+                                    d="M18.244 2.25h3.308l-7.227 8.26L22.75 21.75h-6.584l-5.154-6.736L4.99 21.75H1.68l7.73-8.835L1.25 2.25h6.75l4.66 6.155L18.244 2.25z" />
+                            </svg>
+                        </a>
+                        <a href="https://www.facebook.com/aayushpanthi07" class="social-icon" target="_blank"
+                            rel="noopener noreferrer" aria-label="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://instagram.com/aayushpanthi07" class="social-icon" target="_blank"
+                            rel="noopener noreferrer" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer"></footer>
+
+
+    <!-- Modal for displaying full blog post  -->
+    <div id="blogModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="modalBlogTitle">Blog Post Title</h3>
+                <span class="close-button">×</span>
+            </div>
+            <div class="modal-body">
+                <iframe id="blogIframe" src="" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="modal-footer">
+                <a id="viewOnBloggerLink" href="#" target="_blank" class="btn modal-btn">View on Blogger</a>
+                <button class="btn modal-btn close-modal-footer-btn">Back to Portfolio</button>
+            </div>
+        </div>
+    </div>
+    <!-- End of Modal -->
+
+    <script src="script.js"></script>
 </body>
+
 </html>
