--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
             <!-- Image 1 -->
             <div class="gallery-item">
-                <img src="images/aayush1.jpeg" alt="Facebook">
+                <img src="Images/aayush1.jpeg" alt="Innochem">
                 <div class="overlay">
                     <h3>SSOCHE</h3>
                     <p>INNOCHEM-2025</p>
@@ -247,11 +247,10 @@
 
             <!-- Image 2 -->
             <div class="gallery-item">
-                <img src="images/aayush2.jpeg" alt="LinkedIn">
+                <img src="Images/aayush2.jpeg" alt="Exhibition">
                 <div class="overlay">
                     <h3>INNOCHEM</h3>
                     <p>National Chemical Exhibition 2025</p>
-                    <button>Description</button>
                 </div>
             </div>
             <!-- Upload more image as needed here -->
